# ADEdge

./: .env  .gitignore  Cargo.toml  README.md  egwgwew  github.sh  nohup.out  server.js
ADEdge-nodejs/: .env  package-lock.json  package.json  server.js
ADEdge-nodejs/lib/: db.js
ADEdge-nodejs/public/: app.js  dashboard.css  dashboard.html  login.html  register.html  settings.html
data/: images.json  settings.json  users.json
lib/: db.js
public/: app.js  dashboard.css  dashboard.html  login.html  register.html  settings.html  settingscss.css
src/: main.rs
