[package]
name = "adedge-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "trace"] }

# Async/runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Data / utils
serde = { version = "1", features = ["derive"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
dotenvy = "0.15"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2"
mime = "0.3"
parking_lot = "0.12"
http = "1"
urlencoding = "2"
chrono = { version = "0.4", features = ["clock"] }
